# moneta

./: COPYING  INSTALL  Makefile.am  README.md  configure.ac
contrib/: dash-qt.pro
contrib/debian/: README.md  changelog  dash-qt.desktop  dash-qt.install  dash-qt.lintian-overrides  dash-qt.protocol  dashd.bash-completion  dashd.examples  dashd.install  dashd.lintian-overrides  dashd.manpages  rules
contrib/debian/examples/: dash.conf
contrib/debian/manpages/: dash-qt.1  dash.conf.5  dashd.1
contrib/devtools/: README.md  update-translations.py
contrib/gitian-descriptors/: gitian-linux.yml  gitian-osx-dash.yml  gitian-win.yml
contrib/gitian-downloader/: luke-jr-key.pgp
contrib/macdeploy/: README.md  background.psd  fancy.plist  macdeployqtplus
contrib/spendfrom/: README.md  spendfrom.py
doc/: Doxyfile  README.md  README_windows.txt  build-osx.md  guide-startmany.md  keepass.md  masternode_conf.md  release-notes.md  release-process.md  tor.md  translation_process.md  unit-tests.md
doc/release-notes/: release-notes-0.11.0.md  release-notes-0.11.1.md  release-notes-0.11.2.md  release-notes-0.3.20.2.md  release-notes-0.4.3.md  release-notes-0.4.4.md  release-notes-0.5.2.md  release-notes-0.7.0.md  release-notes-0.7.1.md  release-notes-0.7.2.md  release-notes-0.8.0.md  release-notes-0.8.2.md
qa/pull-tester/: build-tests.sh.in  run-bitcoind-for-test.sh.in
qa/rpc-tests/: util.py  util.sh  walletbackup.sh
share/: setup.nsi.in
share/qt/: Info.plist.in  extract_strings_qt.py
src/: Makefile.am  Makefile.include  activemasternode.cpp  base58.h  bignum.h  chainparams.cpp  chainparams.h  checkpoints.cpp  clientversion.h  coins.h  core.cpp  darksend-relay.h  darksend.cpp  darksend.h  dash-cli-res.rc  dash-cli.cpp  dashd-res.rc  dashd.cpp  hash.h  init.cpp  instantx.h  keepass.cpp  keepass.h  main.cpp  main.h  masternode-pos.h  masternode.cpp  masternode.h  masternodeconfig.cpp  masternodeconfig.h  masternodeman.cpp  masternodeman.h  miner.cpp  net.cpp  netbase.h  noui.cpp  rpcblockchain.cpp  rpcclient.cpp  rpcclient.h  rpcdarksend.cpp  (+21 more)
src/compat/: glibc_compat.cpp
src/m4/: bitcoin_qt.m4
src/qt/: Makefile.am  addressbookpage.cpp  addresstablemodel.cpp  askpassphrasedialog.cpp  bitcoinaddressvalidator.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  darksendconfig.cpp  dash.cpp  dash.qrc  dashstrings.cpp  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  notificator.h  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  overviewpage.cpp  paymentserver.cpp  receiverequestdialog.cpp  rpcconsole.cpp  rpcconsole.h  sendcoinsdialog.cpp  sendcoinsentry.cpp  signverifymessagedialog.cpp  splashscreen.cpp  transactiondesc.cpp  transactionrecord.cpp  utilitydialog.cpp  walletmodel.cpp
src/qt/forms/: aboutdialog.ui  addressbookpage.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: dash_bar.ts  dash_bg.ts  dash_ca.ts  dash_cmn.ts  dash_cs.ts  dash_da.ts  dash_de.ts  dash_el.ts  dash_en.ts  dash_eo.ts  dash_es.ts  dash_fi.ts  dash_fr.ts  dash_hu_HU.ts  dash_it.ts  dash_lv_LV.ts  dash_nb.ts  dash_nl.ts  dash_pl.ts  dash_pt.ts  dash_pt_BR.ts  dash_ru.ts  dash_sk.ts  dash_sv.ts  dash_tr.ts  dash_vi.ts  dash_zh_CN.ts  dash_zh_HK.ts
src/qt/res/: dash-qt-res.rc
src/qt/res/css/: drkblue.css
src/qt/test/: Makefile.am  test_main.cpp  uritests.cpp
src/test/: Makefile.am  README.md  getarg_tests.cpp  main_tests.cpp  netbase_tests.cpp  test_dash.cpp
